# neon

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  archive.sh  configure.ac  libneonconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  neon.sln  neon_config.h
contrib/: README.md  gitian-build.py  install_db4.sh  neon-cli.bash-completion  neon-qt.pro  neon-tx.bash-completion  neond.bash-completion  valgrind.supp
depends/: Makefile  README.md  config.guess  config.sub  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  init.md  neon-conf.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  neon-cli.1  neon-qt.1  neon-tx.1  neon-wallet.1  neond.1  peercoin-tx.1
scripts/: neonconf.sh
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.h  alert.cpp  alert.h  amount.h  arith_uint256.h  (+111 more)
(+722 files in other folders)
