dist_man1_MANS=

if BUILD_NEOND
  dist_man1_MANS+=neond.1
endif

if ENABLE_QT
  dist_man1_MANS+=neon-qt.1
endif

if BUILD_NEON_CLI
  dist_man1_MANS+=neon-cli.1
endif

if BUILD_NEON_TX
  dist_man1_MANS+=neon-tx.1
endif

if ENABLE_WALLET
if BUILD_NEON_WALLET
  dist_man1_MANS+=neon-wallet.1
endif
endif
